--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,10 @@
 .main-div-header{
     display: flex;
-    justify-content: space-around;}
+    justify-content: space-around;
+    align-items: center;
+}
+
+.escudo{
+    width: 60px;
+    height: 60px;
+}
