--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  /*-webkit-text-size-adjust: 100%;*/
 }
 
 a {
@@ -54,6 +54,68 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+
+/**NEWS**/
+
+.cardNews{
+  width:290px;
+  padding: 20px;
+  margin: 10px;
+  box-shadow: 0px 10px 5px rgb(136, 136, 136,0.4);
+
+
+}
+
+.cardSubtitle{
+  display: flex;
+  flex-direction: row !important;
+  flex-wrap: wrap !important;
+  justify-content: space-between !important;
+  padding:5px;
+  margin: 2px !important;
+  align-items: baseline;
+}
+.cardCategory{
+  text-align: start !important;
+  font-style: italic;
+  ;
+}
+.cardDate{
+  text-align: end;
+  color: #315C94;
+
+}
+
+.cardImg{
+  
+  max-width: 260px !important;
+  height: 180px;
+}
+
+.cardBody{
+  padding: 5px !important;
+}
+
+.cardTitle{
+  text-align: start !important;
+}
+
+.cardText{
+  font-size: 12px !important;
+  text-align: justify !important;
+  text-indent: 20px;
+}
+.cardLink{
+  text-align: end;
+  font-size: 11px !important;
+  text-decoration: none !important;
+  background-color: #fff !important;
+  color: #315C94;
+
+
+  
 }
 
 @media (prefers-color-scheme: light) {
