--- a/src/index.css
+++ b/src/index.css
@@ -60,9 +60,9 @@ button:focus-visible {
 /**NEWS**/
 
 .cardNews{
-  width:290px;
-  padding: 20px;
-  margin: 10px;
+  width:260px !important;
+  margin: 0 !important;
+  padding: 0 !important;
   box-shadow: 0px 10px 5px rgb(136, 136, 136,0.4);
 
 
@@ -93,11 +93,6 @@ button:focus-visible {
   max-width: 260px !important;
   height: 180px;
 }
-
-.cardBody{
-  padding: 5px !important;
-}
-
 .cardTitle{
   text-align: start !important;
 }
