--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -7,20 +7,22 @@ body {
     padding: 0;
   }
   .sidenav {
-    height: 20%;
+    height: 25%;
     width: 0;
     position: fixed;
     z-index: 1;
-    top: 0;
+    top: 95px;
     right: 0;
     background-color: #111;
     overflow-x: hidden;
+    text-align: left;
     transition: 0.5s;
     padding-top: 20px;
     opacity: 0.90;
   }
   
   .sidenav a {
+    min-width: 200px;
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
@@ -48,4 +50,34 @@ body {
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+  }
+
+  @media (min-width: 768px) {
+
+    .sidenav hr{display: none;}
+
+    .sidenav {
+      display: flex;
+      padding-top: 2px;
+      padding-bottom: 6px;
+      height: 25px;
+      width: 100%;
+      min-width: 0;
+      z-index: 0;
+      justify-content: space-around;
+      transition: none;
+    }
+
+    .sidenav a{
+      min-width:fit-content;
+      margin: auto;
+      padding: 0px;
+      padding-top: 2px;
+      padding-left: 2px;
+      transition: none;
+
+    }
+    .sidenav-button{
+      display: none;
+    }
   }
