--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 8px ;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -56,11 +56,28 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.btn-generic{
 
+
+}
 /**NEWS**/
+.card-lg{
+  margin-left:0 !important;
+  padding:0 !important;
+  border-radius: 0 !important;
+  border: none !important;
+}
 
 .cardNews{
   width:260px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  box-shadow: 0px 10px 5px rgb(136, 136, 136,0.4);
+
+
+}
+.cardNews-lg{
+  min-width:260px !important;
   margin: 0 !important;
   padding: 0 !important;
   box-shadow: 0px 10px 5px rgb(136, 136, 136,0.4);
@@ -77,9 +94,11 @@ button:focus-visible {
   margin: 2px !important;
   align-items: baseline;
 }
+
 .cardCategory{
   text-align: start !important;
   font-style: italic;
+  
   ;
 }
 .cardDate{
@@ -92,6 +111,14 @@ button:focus-visible {
   
   max-width: 260px !important;
   height: 180px;
+}
+.slide{
+  display: grid;
+  min-width: 260px !important;
+  max-width: 1200px !important;
+  min-height: 280px;
+  max-height: 360px !important;
+  
 }
 .cardTitle{
   text-align: start !important;
@@ -108,10 +135,52 @@ button:focus-visible {
   text-decoration: none !important;
   background-color: #fff !important;
   color: #315C94;
+ 
+}
+.cardLink-lg{
+  text-align: end;
+  font-size: 16px !important;
+  text-decoration: none !important;
+  background-color: #fff !important;
+  color: #315C94;
 
 
   
 }
+.cards-wrapper{
+  display: flex;
+  justify-content: center
+  ;
+}
+.card{
+  margin: 0 .5em;
+}
+
+.slide-moreNews{
+
+  height: 460px !important;
+  
+}
+@media screen and (min-width: 320px) and(max-width: 760px) {
+  .cards-wrapper{
+    display: inline-block;
+    width:calc(100%/2);
+    align-items: center;
+    justify-content: center;
+    
+  }
+  .carousel.inner{
+    overflow: scroll;
+    
+  }
+  .carousel.slide{
+    text-align: center;
+  }
+}
+
+
+
+
 
 @media (prefers-color-scheme: light) {
   :root {
