--- a/src/index.css
+++ b/src/index.css
@@ -100,8 +100,126 @@ a.link-phones:hover {
     justify-content: center;
 }
 
+.card-lg{
+  margin-left:0 !important;
+  padding:0 !important;
+  border-radius: 0 !important;
+  border: none !important;
+}
+
+.cardNews{
+  width:260px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  box-shadow: 0px 10px 5px rgb(136, 136, 136,0.4);
+
+
+}
+.cardNews-lg{
+  min-width:260px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  box-shadow: 0px 10px 5px rgb(136, 136, 136,0.4);
+
+
+}
+
+.cardSubtitle{
+  display: flex;
+  flex-direction: row !important;
+  flex-wrap: wrap !important;
+  justify-content: space-between !important;
+  padding:5px;
+  margin: 2px !important;
+  align-items: baseline;
+}
+
+.cardCategory{
+  text-align: start !important;
+  font-style: italic;
+  
+  ;
+}
+.cardDate{
+  text-align: end;
+  color: #315C94;
+
+}
+
+.cardImg{
+  
+  max-width: 260px !important;
+  height: 180px;
+}
+.slide{
+  display: grid;
+  min-width: 260px !important;
+  max-width: 1200px !important;
+  min-height: 280px;
+  max-height: 360px !important;
+  
+}
+.cardTitle{
+  text-align: start !important;
+}
+
+.cardText{
+  font-size: 12px !important;
+  text-align: justify !important;
+  text-indent: 20px;
+}
+.cardLink{
+  text-align: end;
+  font-size: 11px !important;
+  text-decoration: none !important;
+  background-color: #fff !important;
+  color: #315C94;
+ 
+}
+.cardLink-lg{
+  text-align: end;
+  font-size: 16px !important;
+  text-decoration: none !important;
+  background-color: #fff !important;
+  color: #315C94;
+
+
+  
+}
+.cards-wrapper{
+  display: flex;
+  justify-content: center
+  ;
+}
+.card{
+  margin: 0 .5em;
+}
+
+.slide-moreNews{
+
+  height: 460px !important;
+  
+}
+
 
 /* START MEDIA QUERIES */
+
+@media screen and (min-width: 320px) and(max-width: 760px) {
+  .cards-wrapper{
+    display: inline-block;
+    width:calc(100%/2);
+    align-items: center;
+    justify-content: center;
+    
+  }
+  .carousel.inner{
+    overflow: scroll;
+    
+  }
+  .carousel.slide{
+    text-align: center;
+  }
+}
 
 @media screen and (min-width:576px) {
     
