--- a/src/index.css
+++ b/src/index.css
@@ -153,6 +153,7 @@ h6.btn-square-text {
 
 /** Historia **/
 .text-indent  {
+    padding-right: 5px;
     margin-top: 35px !important;
     text-align: justify;
 }
@@ -187,6 +188,7 @@ h6.btn-square-text {
 
 /* START MEDIA QUERIES */
 @media screen and (min-width:300px) and (max-width:576px){
+
     .btn-square {
        height: min-content!important;
        width: 68px;
