--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
   align-items: flex-start;
   min-width: 320px;
   min-height: 100vh;
+  
 }
 
 .phones {
@@ -251,10 +252,13 @@ a.link-phones:hover {
 
 }
 
+
 /* CULTURA Y TURISMO */
 .body-culturayturismo {
   display: flex;
   flex-direction: column;
+  margin-top: 70px !important;
+
 }
 
 .titles-subtitles {
@@ -421,15 +425,16 @@ h6.btn-square-text {
 }
 
 /** Historia **/
+
 .text-indent  {
     padding-right: 5px;
     margin-top: 35px !important;
     text-align: justify;
 }
 
-.text-indenth3{
+/* .text-indenth3{
      text-shadow: 5px 5px 10px 5px red ;  
-}
+} */
     
 .text-indent img {
     width: 290px !important;
@@ -448,7 +453,7 @@ h6.btn-square-text {
 
 .buttonToolBar{
     text-align: center !important;
-
+ 
 
 }
 
@@ -458,17 +463,29 @@ h6.btn-square-text {
 /* START MEDIA QUERIES */
 @media screen and (min-width:300px) and (max-width:576px){
 
-    .btn-square {
-       height: min-content!important;
-       width: 68px;
+  /* .btn-toolbar{
+    width: 87%;
+  
+    
+  } */
 
-    }
-    h6.btn-square-text{
-       font-size: 11px !important;
+  /* .btn-square {
+    height: min-content!important;
+    width: 50px;
+
+    } */
+  h6.btn-square-text{
+    font-size: 10px !important;
         
     }
 
+  .body-culturayturismo {
+    padding-right: 5px;
+    max-width: 576px;
    
+    
+      
+    }
 }
 
 
