--- a/src/index.css
+++ b/src/index.css
@@ -419,6 +419,30 @@ a.link-activated:hover {
   justify-content: center !important;
 }
 
+/* START CULTURA Y TURISMO - CAMPING */
+.card-camping {
+  width: 100%;
+  height: auto;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+}
+
+
+img {
+  border-radius: 5px 5px 0 0;
+}
+
+.social-net-card {
+  border-top: 1px ridge;
+}
+
+/* END CULTURA Y TURISMO - CAMPING */
+
+/* Add rounded corners to the top left and the top right corner of the image */
+
 /* .row{
   --bs-gutter-x: auto !important
 } */
