creacion vista users admin en proceso

--- a/src/components/form-news/Formulario.css
+++ b/src/components/form-news/Formulario.css
@@ -89,7 +89,7 @@
     --bs-btn-active-color: #fff;
     --bs-btn-active-bg: #fff !important;
     --bs-btn-active-border-color: #315C94 !important;
-    --bs-btn-disabled-color: #315C94 !important;
+    --bs-btn-disabled-color: #3e3c3c !important;
     --bs-btn-disabled-bg: #c1cdd6   !important;
     --bs-btn-disabled-border-color: #86AEBA !important;
     
