--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,11 +1,23 @@
 .main-div-header{
-    display: flex;
+    display:flex;
+    width: 100%;
     justify-content: space-around;
     align-items: center;
     background-color: #c1cdd6;
+    border-color: #315C94;
+  border-bottom-style: solid;
+  border-width: thick;
+  position: fixed;
+  z-index: 10000;
 }
 
 .escudo{
-    width: 60px;
-    height: 60px;
+    width: 140px;
+    height: 75px;
 }
+
+.btns-header {
+    width: 36px;
+    height: 36px; 
+}
+
