--- a/src/index.css
+++ b/src/index.css
@@ -407,12 +407,6 @@ a.link-phones:hover {
 .container-pages {
   margin-top: 80px;
 }
-/* 
-.titles-subtitles {
-  margin-left: 5px;
-  margin-bottom: 25px;
- 
-} */
 
 .text-paragraphs {
   margin: 0;
@@ -438,15 +432,8 @@ a.link-phones:hover {
 
 .box-img {
   display: flex;
-  justify-content: center;
-}
 
-.img-place {
-  width: 90%;
-  height: auto;
-  margin-top: 3px;
-  margin-bottom: 8px;
-}
+} 
 
 /* END CULTURA Y TURISMO */
 
@@ -463,8 +450,9 @@ a.link-phones:hover {
 } 
     
 .text-indent img {
-    width: 290px !important;
-    height: 60% !important;
+    /* width: 290px !important; */
+    max-width: 100%;
+    height: 80% !important;
     text-align: center;
     margin: auto;
     margin-top:15px;
@@ -565,23 +553,58 @@ a.link-activated:hover, .link-activated:hover {
 }
 
 /* START CULTURA Y TURISMO - CAMPING */
-.card-camping {
-  width: 100%;
-  height: auto;
-}
-.card {
+.cultura-card {
+  width: 260px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
+  margin-bottom: 35px;
 }
 
-
-img {
+.cultura-card img{
+  width: 100%;
+  height: auto;
   border-radius: 5px 5px 0 0;
+  margin-bottom: 15px;
 }
 
 .social-net-card {
+  display: flex;
   border-top: 1px ridge;
+}
+
+.box-simple-network {
+padding: 7px;
+color:#315C94;
+}
+
+.column-contact > p > i {
+  color:#315c94;
+  /* margin-top: 20px; */
+}
+
+.column-contact > p > a {
+ text-decoration: none;
+}
+
+.card-title-cultura {
+  margin-bottom: 15px;
+}
+
+.list-cards-cultura {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.contact-card {
+  margin-bottom: 5px;
+}
+
+.phone-camping {
+  text-decoration: none !important;
 }
 
 /* END CULTURA Y TURISMO - CAMPING */
