--- a/src/components/admin-users/admin-users.css
+++ b/src/components/admin-users/admin-users.css
@@ -18,3 +18,16 @@
     max-width: 70px;
     margin: auto;
 }
+
+.uploaded-avatar {
+    width: 70px;
+    height: 70px;
+    margin: auto;
+    border-radius: 50px;
+    border: 2px solid #315C94;
+}
+
+.file-type-error {
+    color: rgb(167, 33, 33);
+    margin-top: 5px;
+}
