--- a/src/components/admin-users/admin-users.css
+++ b/src/components/admin-users/admin-users.css
@@ -19,6 +19,11 @@
     height: 25px;
     margin: auto;
 }
+.avatarInDisplay{
+    width: 50px;
+    height: 50px;
+    margin: auto;
+}
 
 .uploaded-avatar {
     width: 70px;
