--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -2,6 +2,8 @@
     border:none;
     color: #315C94;
     padding: 5px 3px 5px 3px;
+    margin-left: 5px;
+    margin-right: 5px;
     background-color: #fff;
     transition: all 500ms;
 }
@@ -9,5 +11,7 @@
 .admin-button:hover {
     border:none;
     color: #dc3545;
-    padding: 5px 7px 5px 7px;
+    padding: 5px 3px 5px 3px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
