--- a/src/index.css
+++ b/src/index.css
@@ -442,7 +442,6 @@ a.link-phones:hover {
 .cardCategory {
   text-align: start !important;
   font-style: italic;
-  ;
 }
 
 .cardDate {
@@ -499,9 +498,6 @@ a.link-phones:hover {
   text-decoration: none !important;
   background-color: #fff !important;
   color: #315C94;
-
-
-
 }
 
 .cards-wrapper {
@@ -735,9 +731,6 @@ a.link-activated:hover,
   margin-bottom: 35px;
 }
 
-
-.sections-card img {
-
 .sections-card img{
   width: 250px;
   height: 220px;
@@ -905,17 +898,12 @@ a.link-activated:hover,
 
 .btn-close-alert {
   color: #dc3545;
-  ;
   border-color: #dc3545;
-  /* width: 60px;
-    height: 50px; */
-
   transition: all 500ms;
 }
 
 .btn-close-alert:hover {
   background-color: #dc3545;
-  ;
   border-color: #ffffff;
   color: #ffffff;
 }
@@ -959,7 +947,7 @@ a.link-activated:hover,
   font-size: 12px !important;
   text-align: left;
   height: 140px;
-  ;display: table-footer-group;
+  display: table-footer-group;
 
 }
 .requirements-card-li {
